# pyscf-eT

./: .gitignore  README.md  pyproject.toml
src/pyscf_eT/: __init__.py  get_matrix.py
testdata/: test.out
tests/: test_get_matrix.py  test_test.py
